# rec_app

./: .gitignore  CMakeLists.txt  README.md  VideoCapture.cpp  VideoCapture.h
cmake/: Findffmpeg.cmake  Findx264.cmake
hooks_dll/: hooks_dll.pro  hooks_dll.pro.user.4.10-pre1  mousehook.cpp  mousehook.h
installer/: installer.nsi  rec_app.nsi  time_lapse_rec.nsi
src/: VideoCapture.h  applist.cpp  applist.h  applistmodel.cpp  applistmodel.h  appmanager.cpp  appmanager.h  backend.cpp  backend.h  blwindow.cpp  blwindow.h  capturethread.cpp  capturethread.h  captureworker.cpp  captureworker.h  hooks.cpp  hooks.h  kheventfilter.h  lib.cpp  lib.h  main.cpp  main.qml  pch.h  perfomancetimer.cpp  performancetimer.cpp  performancetimer.h  res.qrc  res.rc
src/Components/: AppList.qml  NotificationWindow.qml  PauseButton.qml  RecButton.qml  RefreshButton.qml
src/hooks_dll/: hook.cpp  hook.h  mousehook.cpp  mousehook.h
src/imports/Theme/: Theme.qml
test_sauron_hooks_dll/: mousehook.cpp  mousehook.h  test_sauron_hooks_dll.pro
test_sauron_ui/: VideoCapture.cpp  VideoCapture.h  backend.cpp  backend.h  capturethread.cpp  capturethread.h  ffmpeg_encoder.cpp  ffmpeg_encoder.h  ffmpeg_encoder.h.autosave  kheventfilter.h  main.cpp  main.qml  qml_qmlcache.qrc  test_sauron_ui.pro  x264encoding.cpp  x264encoding.h
time_lapse_rec/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  VideoCapture.cpp  VideoCapture.h  applistmodel.cpp  backend.cpp  backend.h  capturethread.cpp  capturethread.h  kheventfilter.h  main.cpp  main.qml  pch.h  perfomancetimer.cpp  perfomancetimer.h  qml.qrc  time_lapse_rec.pro  time_lapse_rec.pro.user.4.10-pre1  time_lapse_rec.pro.user.e1503c8  time_lapse_rec_resource.rc
time_lapse_rec/Components/: PauseButton.qml  RecButton.qml  TopButton.qml
time_lapse_rec/debug/: moc_predefs.h  qrc_qml.cpp  time_lapse_rec_resource.res
ui_design/: main.cpp  main.qml  qml.qrc  ui_design.pro
ui_design/Components/: PauseButton.qml  RecButton.qml
